// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider component Should render Button with Down icon 1`] = `
<body>
  <div>
    <button
      class="sc-AxjAm dGijUn"
      color="default"
      name=""
      type="button"
    >
      <span
        class="sc-AxirZ cXnwHz"
      />
      <svg>
        down.svg
      </svg>
    </button>
  </div>
</body>
`;

exports[`Divider component Should render Button with Up icon 1`] = `
<body>
  <div>
    <button
      class="sc-AxjAm dGijUn"
      color="default"
      name=""
      type="button"
    >
      <span
        class="sc-AxirZ cXnwHz"
      />
      <svg>
        up.svg
      </svg>
    </button>
  </div>
</body>
`;

exports[`Divider component Should render and match snapshot 1`] = `
<body>
  <div>
    <button
      class="sc-AxjAm dGijUn"
      color="default"
      name=""
      type="button"
    >
      <span
        class="sc-AxirZ cXnwHz"
      />
      <svg
        data-testid="down-svg"
      >
        down.svg
      </svg>
    </button>
  </div>
</body>
`;

exports[`wihtDropDownIndicator hoc Should render and match snapshot 1`] = `
<body>
  <div>
    <button
      class="sc-AxjAm dGijUn"
      color="default"
      name=""
      type="button"
    >
      <span
        class="sc-AxirZ cXnwHz"
      />
      <svg
        data-testid="down-svg"
      >
        down.svg
      </svg>
    </button>
  </div>
</body>
`;

exports[`withDropDownIndicator hight order component Should render and match snapshot 1`] = `
<body>
  <div>
    <button
      class="sc-AxjAm dGijUn"
      color="default"
      name=""
      type="button"
    >
      <span
        class="sc-AxirZ cXnwHz"
      />
      <svg
        data-testid="down-svg"
      >
        down.svg
      </svg>
    </button>
  </div>
</body>
`;
